--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ NEWS_API_KEY=your_newsapi_key
 TELEGRAM_TOKEN=your_telegram_bot_token
 TELEGRAM_CHAT_ID=your_chat_id
 EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_app_specific_pass
+EMAIL_PASS=Mussie12
